# my-agent-workspace

./: .cursorrules  .env.example  .gitignore  CLAUDE.md  MEMORY.md  README.md  requirements.txt  setup.bat  setup.ps1  uninstall.bat  uninstall.ps1  必须要看的内容_系统交接与迁移说明.md
.trae/: rules
01_memory_core/: CHRONICLE.md  MEMORY.md  MEMORY_TEMPLATE.md  SPEC.md  archive_memory.py  test_hook.txt  迁移与配置说明.txt
01_memory_core/.trae/rules/: memory-agent.md
01_memory_core/archive/: mem_2026_06.md
02_git_defender/: 迁移与配置说明.txt
02_git_defender/config/: settings.yaml
02_git_defender/githooks/: README.txt  pre-commit  pre-commit-audit.py
03_browser_crawler/: 迁移与配置说明.txt
03_browser_crawler/config/: README.txt  cost_rules.json  settings.yaml
03_browser_crawler/services/browser_distillation/: README.txt  analyze_portfolio.py  config_loader.py  cost_audit.py  hello.py  html_to_markdown.py  inspiration_schema.py  main.py  pyproject.toml  register_cron.ps1  run_distillation.bat
ai外挂工程/: .env.example  .gitignore  README.md  setup.bat  setup.ps1  uninstall.ps1
ai外挂工程/.trae/: rules
ai外挂工程/01_memory_core/: MEMORY.md  MEMORY_TEMPLATE.md  SPEC.md  archive_chronicle.py  crawl_test.py
ai外挂工程/01_memory_core/.trae/rules/: memory-agent.md
ai外挂工程/02_git_defender/githooks/: pre-commit  pre-commit-audit.py
docs/: MEMORY.md  SPEC.md
githooks/: pre-commit  pre-commit-audit.py
src/01_memory_core/: CHRONICLE.md  archive_chronicle.py  crawl_test.py  utils.py
