[project]
name = "browser-distillation"
version = "0.1.0"
description = "Browser distillation service for AI automation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "browser-use>=0.12.9",
    "langchain-openai>=1.1.9",
    "pyyaml>=6.0.3",
    "playwright>=1.40.0",
]

[tool.uv]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"
